--- a/Jupyter_Notebooks/XGBoost.ipynb
+++ b/Jupyter_Notebooks/XGBoost.ipynb
@@ -14,6 +14,8 @@
     "from collections import Counter\n",
     "from numpy import where\n",
     "\n",
+    "import pickle\n",
+    "\n",
     "import xgboost as xgb\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.model_selection import StratifiedKFold, GridSearchCV\n",
@@ -1526,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "id": "6a836e98",
    "metadata": {
     "scrolled": true
@@ -1545,7 +1547,7 @@
       "              num_parallel_tree=1, random_state=0, reg_alpha=0, reg_lambda=1,\n",
       "              scale_pos_weight=1, subsample=1.0, tree_method='exact',\n",
       "              validate_parameters=1, verbosity=None)\n",
-      "Accuracy: 77.65%\n"
+      "Accuracy: 77.87%\n"
      ]
     }
    ],
@@ -1568,6 +1570,18 @@
     "# evaluate predictions\n",
     "accuracy = accuracy_score(y_test_o, predictions)\n",
     "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "91e33376",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the model to disk\n",
+    "filename = '../Models/model_xgb_over.sav'\n",
+    "pickle.dump(model_xgb_over, open(filename, 'wb'))"
    ]
   },
   {
@@ -1608,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "id": "1434937c",
    "metadata": {},
    "outputs": [
@@ -1616,7 +1630,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[16:39:44] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.4.0/src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[08:35:27] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.4.0/src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
       "              colsample_bynode=1, colsample_bytree=1.0, gamma=0.5, gpu_id=-1,\n",
       "              importance_type='gain', interaction_constraints='',\n",
@@ -1625,7 +1639,7 @@
       "              n_estimators=100, n_jobs=16, num_parallel_tree=1, random_state=0,\n",
       "              reg_alpha=0, reg_lambda=1, scale_pos_weight=1, subsample=1.0,\n",
       "              tree_method='exact', validate_parameters=1, verbosity=None)\n",
-      "Accuracy: 76.32%\n"
+      "Accuracy: 74.96%\n"
      ]
     }
    ],
@@ -1650,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2a91a23b",
    "metadata": {},
    "outputs": [
@@ -1658,7 +1672,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 76.32%\n"
+      "Accuracy: 74.96%\n"
      ]
     }
    ],
