making readme changes

--- a/Jupyter_Notebooks/Modeling.ipynb
+++ b/Jupyter_Notebooks/Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "id": "15f925bc",
    "metadata": {
     "scrolled": false
@@ -92,7 +92,9 @@
   {
    "cell_type": "markdown",
    "id": "d3d303be",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Helper Functions"
    ]
@@ -104,6 +106,7 @@
    "metadata": {
     "deletable": false,
     "editable": false,
+    "hidden": true,
     "run_control": {
      "frozen": true
     }
@@ -125,6 +128,7 @@
    "metadata": {
     "deletable": false,
     "editable": false,
+    "hidden": true,
     "run_control": {
      "frozen": true
     }
@@ -148,6 +152,7 @@
    "metadata": {
     "deletable": false,
     "editable": false,
+    "hidden": true,
     "run_control": {
      "frozen": true
     }
@@ -182,7 +187,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "de1dfe0c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# # Plot Confusion Matrix\n",
@@ -199,34 +206,28 @@
   {
    "cell_type": "markdown",
    "id": "c605d101",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
    "id": "a2f9ed80",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Read column names from file\n",
     "cols = ['Monthly Reporting Period', 'Origination Date', 'Maturity Date', 'Loan Identifier']\n",
-    "df = pd.read_csv('../Final_Clean_Data.csv', index_col=0).drop(cols, axis = 'columns')"
+    "df = pd.read_csv('../CSV_Files//Final_Clean_Data.csv', index_col=0).drop(cols, axis = 'columns')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "id": "9f600dad",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -386,7 +387,7 @@
        "4                   755           0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,10 +399,7 @@
   {
    "cell_type": "markdown",
    "id": "a240352e",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Current distribution for our imbalanced target"
    ]
@@ -413,7 +411,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "hidden": true,
     "run_control": {
      "frozen": true
     }
@@ -443,26 +440,16 @@
   {
    "cell_type": "markdown",
    "id": "33849952",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Defining our data for train_test_split on imbalanced data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "id": "5e900f03",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "hidden": true,
-    "run_control": {
-     "frozen": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# # define dataset\n",
@@ -482,7 +469,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "hidden": true,
     "run_control": {
      "frozen": true
     },
@@ -548,7 +534,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "hidden": true,
     "run_control": {
      "frozen": true
     }
@@ -576,7 +561,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "hidden": true,
     "run_control": {
      "frozen": true
     },
@@ -601,10 +585,7 @@
   {
    "cell_type": "markdown",
    "id": "8e7b5fbd",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Scatter plot of target feature"
    ]
@@ -616,7 +597,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "hidden": true,
     "run_control": {
      "frozen": true
     }
@@ -657,9 +637,7 @@
   {
    "cell_type": "markdown",
    "id": "81bbba2e",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Over and Under Sampling"
    ]
@@ -668,9 +646,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "fdd771f9",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -707,9 +683,7 @@
   {
    "cell_type": "markdown",
    "id": "48b54eb7",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### under sampling train_test_split"
    ]
@@ -718,9 +692,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "eec07aed",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_train_u, X_test_u, y_train_u, y_test_u = train_test_split(X_under, y_under, test_size=0.33, random_state=42)"
@@ -729,9 +701,7 @@
   {
    "cell_type": "markdown",
    "id": "2466a2f6",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### over sampling train_test_split"
    ]
@@ -740,9 +710,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "8228a38c",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_train_o, X_test_o, y_train_o, y_test_o = train_test_split(X_over, y_over, test_size=0.33, random_state=42)"
@@ -751,9 +719,7 @@
   {
    "cell_type": "markdown",
    "id": "6ef5bee4",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Under Sampling Data Logistic Regression"
    ]
@@ -762,9 +728,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "31ab23f4",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "clf = LogisticRegression().fit(X_train_u, y_train_u)\n",
@@ -775,9 +739,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "36f2d7f5",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -800,9 +762,7 @@
    "cell_type": "code",
    "execution_count": 72,
    "id": "2cc65341",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -883,7 +843,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "hidden": true,
     "run_control": {
      "frozen": true
     }
@@ -931,7 +890,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "hidden": true,
     "run_control": {
      "frozen": true
     }
@@ -964,7 +922,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "hidden": true,
     "run_control": {
      "frozen": true
     }
