updated noteboooks and readme file

--- a/Jupyter_Notebooks/Modeling.ipynb
+++ b/Jupyter_Notebooks/Modeling.ipynb
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 93,
    "id": "fdd771f9",
    "metadata": {},
    "outputs": [
@@ -652,32 +652,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counter({0: 8255841, 1: 22816})\n",
-      "Counter({0: 45632, 1: 22816})\n",
-      "Counter({0: 45632, 1: 31942})\n"
+      "  Initial Data: Counter({0: 8255841, 1: 22816})\n",
+      "Under sampling: Counter({0: 45632, 1: 22816})\n",
+      " Over sampling: Counter({0: 45632, 1: 31942})\n"
      ]
     }
    ],
    "source": [
     "# example of random oversampling to balance the class distribution\n",
     "# Combining Random Oversampling and Undersampling\n",
-    "\n",
+    "counter = Counter(y)\n",
     "# summarize class distribution\n",
-    "print(Counter(y))\n",
+    "print(f'  Initial Data: {counter}')\n",
     "\n",
     "# define undersampling strategy\n",
     "under = rus(sampling_strategy=0.5)\n",
+    "count_y = Counter(y_under)\n",
     "# fit and apply the transform\n",
     "X_under, y_under = under.fit_resample(X, y)\n",
     "# summarize class distribution\n",
-    "print(Counter(y_under))\n",
+    "print(f'Under sampling: {count_y}')\n",
     "\n",
     "# define oversampling strategy\n",
     "over = SMOTE(sampling_strategy=0.7)\n",
     "# fit and apply the transform\n",
     "X_over, y_over = over.fit_resample(X_under, y_under)\n",
     "# summarize class distribution\n",
-    "print(Counter(y_over))\n"
+    "counter_o = Counter(y_over)\n",
+    "print(f' Over sampling: {counter_o}')\n"
    ]
   },
   {
@@ -719,7 +721,9 @@
   {
    "cell_type": "markdown",
    "id": "6ef5bee4",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Under Sampling Data Logistic Regression"
    ]
@@ -728,7 +732,9 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "31ab23f4",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "clf = LogisticRegression().fit(X_train_u, y_train_u)\n",
@@ -739,7 +745,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "36f2d7f5",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -762,7 +770,9 @@
    "cell_type": "code",
    "execution_count": 72,
    "id": "2cc65341",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -843,6 +853,7 @@
    "metadata": {
     "deletable": false,
     "editable": false,
+    "hidden": true,
     "run_control": {
      "frozen": true
     }
@@ -890,6 +901,7 @@
    "metadata": {
     "deletable": false,
     "editable": false,
+    "hidden": true,
     "run_control": {
      "frozen": true
     }
@@ -922,6 +934,7 @@
    "metadata": {
     "deletable": false,
     "editable": false,
+    "hidden": true,
     "run_control": {
      "frozen": true
     }
